--- a/choke_check_web/src/app/ui/users-page/users-page.component.html
+++ b/choke_check_web/src/app/ui/users-page/users-page.component.html
@@ -1,1 +1,42 @@
-<p>users-page works!</p>
+<table class="table table-striped table-hover table-responsive align-middle">
+	<thead>
+		<tr>
+			<th scope="col">Id</th>
+			<th scope="col">Name</th>
+			<th scope="col">Email</th>
+			<th scope="col">Sex</th>
+            <th scope="col">Age</th>
+            <th scope="col">Weight</th>
+            <th scope="col">Height</th>
+            <th scope="col">Belt</th>
+            <th scope="col">Action</th>
+		</tr>
+	</thead>
+	<tbody>
+		@for (user of users; track user.id) {
+			<tr>
+				<th scope="row">{{ user.id }}</th>
+				<td>
+					{{ user.name }}
+				</td>
+                <td>{{ user.email }}</td>
+                <td>{{ getSex(user.sex) }}</td>
+				<td>{{ user.age | number }}</td>
+                <td>{{ user.weight }}</td>
+                <td>{{ user.height }}</td>
+                <td>{{ user.belt }}</td>
+                <td>Hola</td>
+			</tr>
+		}
+	</tbody>
+</table>
+
+<div class="d-flex justify-content-center p-2 m-auto align-middle">
+	<ngb-pagination
+		[collectionSize]="usersInfo.totalElements"
+		[(page)]="usersInfo.pageNumber"
+		[pageSize]="usersInfo.size"
+		(pageChange)="refreshUsers()"
+	>
+	</ngb-pagination>
+</div>
