FEAT-10: now is fully implemented the creation of an user in the web page

--- a/choke_check_web/src/app/ui/users-page/users-page.component.html
+++ b/choke_check_web/src/app/ui/users-page/users-page.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-hover table-responsive align-middle">
+<table class="table table-striped table-hover table-responsive align-middle mb-0">
 	<thead>
 		<tr>
 			<th scope="col">Id</th>
@@ -56,16 +56,22 @@
 					<div id="gNErr" class="text-danger">{{userNameErr}}</div>
 				</div>
 				<div class="mb-3 row">
-					<div class="mb-3">
-						<label for="name" class="form-label">Name</label>
-						<input type="text" class="form-control" id="name" name="name" aria-describedby="name" [(ngModel)]="name" required>
-						<div id="nErr" class="text-danger">{{nameErr}}</div>
+					<div class="col-6">
+						<div class="mb-3">
+							<label for="name" class="form-label">Name</label>
+							<input type="text" class="form-control" id="name" name="name" aria-describedby="name" [(ngModel)]="name" required>
+							<div id="nErr" class="text-danger">{{nameErr}}</div>
+						</div>
 					</div>
-					<div class="mb-3">
-						<label for="surName" class="form-label">Surname</label>
-						<input type="text" class="form-control" id="surName" name="userName" aria-describedby="surName" [(ngModel)]="surName" required>
-						<div id="surNErr" class="text-danger">{{surNameErr}}</div>
+					<div class="col-6">
+						<div class="mb-3">
+							<label for="surName" class="form-label">Surname</label>
+							<input type="text" class="form-control" id="surName" name="userName" aria-describedby="surName" [(ngModel)]="surName" required>
+							<div id="surNErr" class="text-danger">{{surNameErr}}</div>
+						</div>
 					</div>
+					
+					
 				</div>
 				<div class="mb-3">
 					<label for="password" class="form-label">Password</label>
@@ -78,38 +84,60 @@
 					<div id="emailErr" class="text-danger">{{emailErr}}</div>
 				</div>
 				<div class="mb-3 row">
-					<div class="mb-3">
-						<label for="height" class="form-label">Height</label>
-						<input type="number" class="form-control" id="height" name="height" aria-describedby="height" [(ngModel)]="height" required>
-						<div id="heightErr" class="text-danger">{{heightErr}}</div>
+					<div class="col-4">
+						<div class="mb-3">
+							<label for="height" class="form-label">Height</label>
+							<input type="number" class="form-control" id="height" name="height" aria-describedby="height" [(ngModel)]="height" required>
+							<div id="heightErr" class="text-danger">{{heightErr}}</div>
+						</div>
 					</div>
-					<div class="mb-3">
-						<label for="weight" class="form-label">Weight</label>
-						<input type="number" class="form-control" id="weight" name="weight" aria-describedby="weight" [(ngModel)]="weight" required>
-						<div id="weightErr" class="text-danger">{{weightErr}}</div>
+					<div class="col-4">
+						<div class="mb-3">
+							<label for="age" class="form-label">Age</label>
+							<input type="number" class="form-control" id="age" name="height" aria-describedby="age" [(ngModel)]="age" required>
+							<div id="ageErr" class="text-danger">{{ageErr}}</div>
+						</div>
 					</div>
+					<div class="col-4">
+						<div class="mb-3">
+							<label for="weight" class="form-label">Weight</label>
+							<input type="number" class="form-control" id="weight" name="weight" aria-describedby="weight" [(ngModel)]="weight" required>
+							<div id="weightErr" class="text-danger">{{weightErr}}</div>
+						</div>
+					</div>
+					
+					
 				</div>
 				<div class="mb-3 row">
-					<div class="btn-lg mb-5 mt-4" ngbDropdown role="group" aria-label="Button group with nested dropdown">
-						<button type="button" class="btn btn-outline-secondary" ngbDropdownToggle>Select the user belt</button>
-						<div class="dropdown-menu" ngbDropdownMenu>
-							<button ngbDropdownItem (click)="userGym = 'WHITE'">White</button>
-							<button ngbDropdownItem (click)="userGym = 'BLUE'">Blue</button>
-							<button ngbDropdownItem (click)="userGym = 'PURPLE'">Purple</button>
-							<button ngbDropdownItem (click)="userGym = 'BROWN'">Brown</button>
-							<button ngbDropdownItem (click)="userGym = 'BLACK'">Black</button>
-							<button ngbDropdownItem (click)="userGym = 'RED_BLACK'">Red Black</button>
-							<button ngbDropdownItem (click)="userGym = 'RED_WHITE'">Red White</button>
-							<button ngbDropdownItem (click)="userGym = 'RED'">Red</button>
-						</div>
+					<div class="col-6">
+						<select class="form-select" aria-label="Default select example">
+							<option selected disabled>Select the user belt</option>
+							<option (click)="userBelt = 'WHITE'">White</option>
+							<option (click)="userBelt = 'BLUE'">Blue</option>
+							<option (click)="userBelt = 'PURPLE'">Purple</option>
+							<option (click)="userBelt = 'BROWN'" value="3">Brown</option>
+							<option (click)="userBelt = 'BLACK'" value="3">Black</option>
+							<option (click)="userBelt = 'RED_BLACK'" value="3">Red Black</option>
+							<option (click)="userBelt = 'RED_WHITE'" value="3">Red White</option>
+							<option (click)="userBelt = 'RED'" value="3">Red</option>
+						</select>
 					</div>
-					<div class="btn-lg mb-5 mt-4" ngbDropdown role="group" aria-label="Button group with nested dropdown">
-						<button type="button" class="btn btn-outline-secondary" ngbDropdownToggle>Select the user sex</button>
-						<div class="dropdown-menu" ngbDropdownMenu>
-							<button ngbDropdownItem (click)="userSex = 0">Male</button>
-							<button ngbDropdownItem (click)="userSex = 1">Female</button>
-						</div>
+					<div class="col-6">
+						<select class="form-select" aria-label="Default select example">
+							<option selected disabled>Select the user sex</option>
+							<option (click)="userSex = 0">Male</option>
+							<option (click)="userSex = 1">Female</option>
+						</select>
 					</div>
+					
+					
+				</div>
+				<div class="mb-3">
+					<select class="form-select" aria-label="Default select example">
+						<option selected disabled>Select the user rol</option>
+						<option (click)="userRol = 0">Admin</option>
+						<option (click)="userRol = 1">User</option>
+					</select>
 				</div>
 				
 				<button type="button" class="btn btn-dark" (click)="toSave()">Guardar</button>
