FEAT-16: Delete tournament is now avalaible

--- a/choke_check_web/src/app/ui/tournaments-page/tournaments-page.component.html
+++ b/choke_check_web/src/app/ui/tournaments-page/tournaments-page.component.html
@@ -29,7 +29,11 @@
                 <td>{{ tournament.higherBelt }}</td>
                 <td>{{ tournament.minWeight }} - {{tournament.maxWeight}}</td>
                 <td>{{ tournament.city }}</td>
-                <td>Hola</td>
+                <td>
+					<button class="btn" (click)="deleteTournament(tournament.id)">
+						<i class="fa-regular fa-trash-can" style="color:red;"></i>
+					</button>
+				</td>
 			</tr>
 		}
 	</tbody>
