FEAT-15: The delete of gym is completly done

--- a/choke_check_web/src/app/ui/gym-page/gym-page.component.html
+++ b/choke_check_web/src/app/ui/gym-page/gym-page.component.html
@@ -22,7 +22,11 @@
 				<td>{{ gym.latitude | number }}</td>
                 <td>{{ gym.altitude | number }}</td>
                 <td class="text-center">{{ gym.numberTournaments | number }}</td>
-                <td>Hola</td>
+                <td>
+					<button class="btn" (click)="deleteGym(gym.id)">
+						<i class="fa-regular fa-trash-can" style="color:red;"></i>
+					</button>
+				</td>
 			</tr>
 		}
 	</tbody>
