--- a/choke_check_web/src/app/ui/users-page/users-page.component.html
+++ b/choke_check_web/src/app/ui/users-page/users-page.component.html
@@ -25,7 +25,11 @@
                 <td>{{ user.weight }}</td>
                 <td>{{ user.height }}</td>
                 <td>{{ user.belt }}</td>
-                <td>Hola</td>
+                <td>
+					<button class="btn" (click)="deleteUser(user.id)">
+						<i class="fa-regular fa-trash-can" style="color:red;"></i>
+					</button>
+				</td>
 			</tr>
 		}
 	</tbody>
