FEAT-08: Finished the edition of gym.

--- a/choke_check_web/src/app/ui/gym-page/gym-page.component.html
+++ b/choke_check_web/src/app/ui/gym-page/gym-page.component.html
@@ -23,6 +23,9 @@
                 <td>{{ gym.altitude | number }}</td>
                 <td class="text-center">{{ gym.numberTournaments | number }}</td>
                 <td>
+					<button class="btn" (click)="openEditModal(gym, createGymModal)">
+						<i class="fa-regular fa-pen-to-square" style="color:yellow;"></i>
+					</button>
 					<button class="btn" (click)="deleteGym(gym.id)">
 						<i class="fa-regular fa-trash-can" style="color:red;"></i>
 					</button>
