FEAT-18 Finished the backend part for the 5 best appliers and the frontend of it

--- a/choke_check_web/src/app/ui/home-page/home-page.component.html
+++ b/choke_check_web/src/app/ui/home-page/home-page.component.html
@@ -1,3 +1,11 @@
 
-<p>home-page works!</p>
+<div class="m-5 row">
+    <div class="col-1">
+
+    </div>
+    <div class="col-6">
+        <app-best-appliers-chart></app-best-appliers-chart>
+    </div>
+    <div class="col-6"></div>
+</div>
 
