--- a/choke_check_web/src/app/components/best-appliers-chart/best-appliers-chart.component.html
+++ b/choke_check_web/src/app/components/best-appliers-chart/best-appliers-chart.component.html
@@ -1,3 +1,4 @@
-<div class="w-100 rounded-2" id="baseBg">
-    <canvas baseChart [data]="barChartData" [type]="barChartType" [options]="barChartOptions" class="p-5"></canvas>
+<div class="rounded-2 shadow m-auto" id="baseBg">
+    <h3 class="fs-3 text-center fw-bold">Users who applied for more tournaments</h3>
+    <canvas baseChart [data]="barChartData" [type]="barChartType" [options]="barChartOptions" class="m-auto align-self-center"></canvas>
 </div>
