--- a/choke_check_web/src/app/ui/home-page/home-page.component.html
+++ b/choke_check_web/src/app/ui/home-page/home-page.component.html
@@ -1,11 +1,16 @@
 
-<div class="m-5 row">
-    <div class="col-1">
-
-    </div>
-    <div class="col-6">
+<div class="m-3 row">
+    <div class="col-12">
         <app-best-appliers-chart></app-best-appliers-chart>
     </div>
-    <div class="col-6"></div>
+    <div class="col-11 row m-auto mt-2">
+        <div class="col-6 ">
+            <app-gym-poster-radial-chart></app-gym-poster-radial-chart>
+        </div>
+        <div class="col-6 ">
+            <app-user-poster-list></app-user-poster-list>
+        </div>
+    </div>
+    
 </div>
 
