FIX-04: Finished now the pagination of the differents tables in the web page works.

--- a/choke_check_web/src/app/ui/gym-page/gym-page.component.html
+++ b/choke_check_web/src/app/ui/gym-page/gym-page.component.html
@@ -40,7 +40,7 @@
 <div class="d-flex justify-content-center p-2 m-auto align-middle">
 	<ngb-pagination
 		[collectionSize]="gymsInfo == null ?  0: gymsInfo.totalElements"
-		[(page)]="gymsInfo.pageNumber"
+		[(page)]="pageNumber"
 		[pageSize]="gymsInfo == null ?  0: gymsInfo.size"
 		(pageChange)="refreshGyms()"
 	>
