--- a/choke_check_web/src/app/ui/users-page/users-page.component.html
+++ b/choke_check_web/src/app/ui/users-page/users-page.component.html
@@ -43,7 +43,7 @@
 <div class="d-flex justify-content-center p-2 m-auto align-middle">
 	<ngb-pagination
 		[collectionSize]="usersInfo.totalElements"
-		[(page)]="usersInfo.pageNumber"
+		[(page)]="pageNumber"
 		[pageSize]="usersInfo.size"
 		(pageChange)="refreshUsers()"
 	>
