--- a/choke_check_web/src/app/ui/tournaments-page/tournaments-page.component.html
+++ b/choke_check_web/src/app/ui/tournaments-page/tournaments-page.component.html
@@ -48,7 +48,7 @@
 <div class="d-flex justify-content-center p-2 m-auto align-middle">
 	<ngb-pagination
 		[collectionSize]="tournamentsInfo.totalElements"
-		[(page)]="tournamentsInfo.pageNumber"
+		[(page)]="pageNumber"
 		[pageSize]="tournamentsInfo.size"
 		(pageChange)="refreshTournaments()"
 	>
